Fixed bug filter was behind popular recipe section
- overflow hidden from main tag was removed
- clip-path was added to dont allow blur overlay
overflow

--- a/src/components/FilterSearchBar/FilterSearchBar.module.css
+++ b/src/components/FilterSearchBar/FilterSearchBar.module.css
@@ -10,6 +10,7 @@
     background-color: var(--Paleta02);
     padding: 5px;
     border-radius: 0px 0px 5px 5px;
+    z-index: 500;
 }
 
 .filterSearchBar > * {
