--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -22,8 +22,6 @@
 
   position: relative;
 
-  overflow: hidden;
-
 }
 
 .main::before {
@@ -39,11 +37,13 @@
   background-size: cover;
   filter: blur(4px); /* Blur - Ajuste o valor */
   z-index: -1;
+  clip-path: inset(0);
 }
 
 .main::after {
   content: "";
   position: absolute;
+
 
   top: 0;
   left: 0;
